<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/gris"
    tools:context=".activities.mainFragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/profilePicGoogle"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_perfil"
                app:srcCompat="@drawable/ic_google" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/gris"
            app:cardCornerRadius="0dp">

            <TextView
                android:id="@+id/userTxtGoogle"
                style="@style/TextSimple16White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="8dp"
                android:text="Usuario"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17Google"
                style="@style/TextSimple16White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:text="@string/user" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/gris"
            app:cardCornerRadius="0dp">

            <TextView
                android:id="@+id/currentEmailGoogle"
                style="@style/TextSimple16White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="8dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView18Google"
                style="@style/TextSimple16White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:text="@string/email" />
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/logOutBtGoogle"
            style="@style/TextSimple16"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/gris"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="#FF0C0C"
            android:textStyle="bold"
            app:cornerRadius="0dp" />

    </LinearLayout>

</FrameLayout>